helm/min-cluster-allinone/min-cluster-elk/service-nodeport-es-min-c0-ingest.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: es-min-c0-ingest
  namespace: elasticsearch
  labels:  
    app: es-min-c0-ingest #服务名（这个需要与xxxx-rc.yaml文件中命名的k8s-app字段一致）  
    kubernetes.io/name: es-min-c0-ingest #"服务名"  
spec:  
  type: NodePort
  selector:  
    app: es-min-c0-ingest #服务名
  ports:  
  - name: transport #服务名-sv
    port: 9300 #8081（pod上的端口）  
    targetPort: 9300 #8081（service上的端口）  
    #nodePort: 30964（node上的端口，如果不设置则由kubernets自动分配）
